--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@ html, body, #root {
 }
 
 .main-container {
-  background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(184, 178, 178, 0.418) ), url('./bg.jpg');
+  /* background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(184, 178, 178, 0.418) ), url('./bg.jpg'); */
   background-size: cover;
   background-position: center;
 }
